🐛Fixing that clear buttons were visible for read-only textfields

--- a/src/main/java/com/dansoftware/libraryapp/gui/theme/global-dark.css
+++ b/src/main/java/com/dansoftware/libraryapp/gui/theme/global-dark.css
@@ -236,6 +236,10 @@ custom
     /*-fx-fill: black;*/
 }
 
+.text-field:readonly {
+    -right-button-visible: false;
+}
+
 /* Plugin manager  */
 
 .pluginAdderPane {
