--- a/src/main/java/com/dansoftware/libraryapp/gui/theme/global-light.css
+++ b/src/main/java/com/dansoftware/libraryapp/gui/theme/global-light.css
@@ -212,6 +212,10 @@ custom
     -fx-fill: black;
 }
 
+.text-field:readonly {
+    -right-button-visible: false;
+}
+
 /* Plugin manager  */
 
 .pluginAdderPane {
